[project]
name = "bambulab-light-off"
version = "0.1.0"
description = "Turns the light off on Bambu Lab printers if they're idle"
authors = [
    {name = "Evan Purkhiser", email = "evanpurkhiser@gmail.com"},
]
dependencies = ["bambulabs-api>=2.6.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
